<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_layout"
    android:background="@color/background"
    tools:context=".Login_Actitivty">

    <ScrollView
        android:scrollbars="none"
        android:background="@drawable/ic_loginbg_svg"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:backgroundTintMode="multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:gravity="center"
                android:layout_weight="2.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView_logologin"
                    android:layout_width="250dp"
                    android:layout_height="90dp"

                    android:layout_marginBottom="28dp"
                    android:src="@drawable/logo"
                    android:transitionName="@string/activity_image_trans"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:padding="45dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="25dp"
                        android:text="@string/login_here"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/compCodeLayout"
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="18dp"
                            android:textColor="#EE5D3D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Your Company code is: "/>
                        <TextView
                            android:id="@+id/txtCompanyCode"
                            android:textSize="18dp"
                            android:textColor="#EE5D3D"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="000101"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_edit_brown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/username"
                            android:paddingRight="15dp"
                            android:drawableRight="@drawable/ic_black_male_user_symbol"
                            android:singleLine="true"
                            android:paddingLeft="15dp"
                            android:hint="@string/user_name"
                            android:background="@null"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_edit_brown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:paddingRight="15dp"
                            android:drawableRight="@drawable/ic_lock"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:paddingLeft="15dp"
                            android:hint="@string/passwor_hiding"
                            android:background="@null"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:orientation="horizontal">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <CheckBox
                                android:id="@+id/check_remember"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/remember_me"
                                android:textSize="11dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <CheckBox
                                android:id="@+id/check_showpassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="3dp"
                                android:layout_weight="1"
                                android:text="@string/show_password"
                                android:textSize="11dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />
                        </androidx.constraintlayout.widget.ConstraintLayout>




                    </LinearLayout>


                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/login_button_style"
                        android:text="@string/login"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/forgetpassword"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textSize="16dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/changeCompCode"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textSize="16dp"
                        android:text="Change Company Code"
                        android:textColor="@color/colorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>